Fix column projection string for all supported types